src/test/deca/test_compilateur/context/invalid/created/this/this_dans_main_field.deca
// Description :
//		un this dans un main (version acces champs)
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9 : (3.43) 'this' ne peut être utilisé dans le main

{
this.a;
}